[package]
name = "beet_db"
description = "Read a beets music database"
version = "0.1.0"
authors = ["George Kaplan <george@georgekaplan.xyz>"]
edition = "2018"
repository = "https://github.com/g-s-k/berts/tree/master/db"
readme = "./README.md"
license = "MIT"

[dependencies]
serde = "1.0.85"
serde_derive = "1.0.85"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = "0.16.0"
